[tool.poetry]
name = "fastapi-api"
version = "0.1.0"
description = "Web API Using NIX"
authors = ["Milan Lagae <you@example.com>"]
readme = "README.md"
packages = [{include = "web_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
hypercorn = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
webapi = "web_api.main:start"
